--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "mongoose": "^8.3.4"
+    "mongoose": "^8.3.4",
+    "uuid": "^9.0.1"
   }
 }
